Desktop interface and javascript interaction

--- a/index.html
+++ b/index.html
@@ -7,36 +7,41 @@
   <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-
+  <link rel="stylesheet" href="css/bootstrap.min.css">
+  <link rel="stylesheet" href="css/style.css">
   <title>Frontend Mentor | Intro component with sign up form</title>
+  <script src="js/script.js"></script>
 </head>
 
-<body>
-  <header>
-    <h1>Learn to code by watching others</h1>
-
-    <p>See how experienced developers solve problems in real-time. Watching scripted tutorials is great,
+<body class="d-flex  justify-content-center align-items-center flex-wrap">
+  <header class="my-5 mx-5">
+    <h1 class="text-white  fw-bold mx-5  fix-width slim">Learn to code by watching others</h1>
+    <p class="text-white fw-700 mx-5 mt-4 fix-width">See how experienced developers solve problems in real-time. Watching scripted tutorials is great,
       but understanding how developers think is invaluable.
     </p>
   </header>
-  <main>
-    Try it free 7 days then $20/mo. thereafter
-
-    First Name
-    Last Name
-    Email Address
-    Password
-
-    Claim your free trial
-
-    By clicking the button, you are agreeing to our Terms and Services
+  <main class="d-flex flex-column justify-content-center align-items-center">
+    <p class="border-top-0 border-start-0 border-end-0 text-white text-center bg-dark-blue px-5 py-3 fix-width rounded-3"><strong>Try it free 7 days</strong> then $20/mo. thereafter</p>
+    <form action="data.php" method="post" onsubmit="return validateForm()" class="bg-white fix-width d-flex flex-column justify-content-center align-items-center rounded-3">
+      <input type="text" onkeyup="changeName()" name="f-name" id="f-name" placeholder="First Name" class="w-85 mx-3 mt-4 mb-2 px-3 py-3 border border-2  rounded-2">
+      <p id="empty-name" class="error w-85 color-red fst-italic"></p>
+      <input type="text" onkeyup="changeLastName()" name="l-name" id="l-name" placeholder="Last Name" class="w-85 mx-3 my-2 px-3 py-3 border border-2 b-grayish-blue rounded-2">
+      <p id="empty-last-name" class="error w-85 color-red fst-italic"></p>
+      <input type="text" onkeyup="changeEmail()" name="email" id="email" placeholder="Email Address" class="w-85 mx-3 my-2 px-3 py-3 border border-2 b-grayish-blue rounded-2">
+      <p id="empty-email" class="error w-85 color-red" fst-italic></p>
+      <input type="password" onkeyup="changePassword()" name="password" id="password" placeholder="Password" class="w-85 mx-3 mt-2 mb-2 px-3 py-3 border border-2 b-grayish-blue rounded-2">
+      <p id="empty-password" class="error w-85 color-red fst-italic"></p>
+      <button class="border-top-0 border-start-0 border-end-0  text-white text-uppercase fw-bold bg-green px-3 py-3 rounded-2 mb-3 w-85">Claim your free trial</button>
+      <p class="w-85 color-gray text-center explain fw-400 lh-lg">By clicking the button, you are agreeing to our <span class="color-red fw-bold">Terms and Services</span></p>
+    </form>
+    
   </main>
-  <footer>
-    <p class="attribution">
+ <!-- <footer>
+    <p class="attribution px-5 py-5">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
       Coded by <a href="#">Noemí Varela</a>.
     </p>
-  </footer>
+  </footer>-->
 </body>
 
 </html>
