README.md modified, footer added, other changes

--- a/index.html
+++ b/index.html
@@ -36,12 +36,12 @@
     </form>
     
   </main>
- <!-- <footer>
+ <footer>
     <p class="attribution px-5 py-5">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
       Coded by <a href="#">Noemí Varela</a>.
     </p>
-  </footer>-->
+  </footer>
 </body>
 
 </html>
