Error in class corrected

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <input type="text" onkeyup="changeLastName()" name="l-name" id="l-name" placeholder="Last Name" class="w-85 mx-3 my-2 px-3 py-3 border border-2 b-grayish-blue rounded-2">
       <p id="empty-last-name" class="error w-85 color-red fst-italic"></p>
       <input type="text" onkeyup="changeEmail()" name="email" id="email" placeholder="Email Address" class="w-85 mx-3 my-2 px-3 py-3 border border-2 b-grayish-blue rounded-2">
-      <p id="empty-email" class="error w-85 color-red" fst-italic></p>
+      <p id="empty-email" class="error w-85 color-red fst-italic" ></p>
       <input type="password" onkeyup="changePassword()" name="password" id="password" placeholder="Password" class="w-85 mx-3 mt-2 mb-2 px-3 py-3 border border-2 b-grayish-blue rounded-2">
       <p id="empty-password" class="error w-85 color-red fst-italic"></p>
       <button class="border-top-0 border-start-0 border-end-0  text-white text-uppercase fw-bold bg-green px-3 py-3 rounded-2 mb-3 w-85">Claim your free trial</button>
